# videopilot

./: .gitignore  AGENT.md  LICENSE  MANIFEST.in  README.md  _test_mcp_e2e.py  _test_progress_smoke.py  pyproject.toml  videopilot.py  videopilot_cli.py  videopilot_mcp.py
.github/workflows/: build.yml  release.yml
assets/: make_arch.py
docs/: index.html
examples/highlight-cut/: compose-plan.json  cut-plan.json
examples/narrated-highlights/: compose-plan.json  cut-plan.json  script.json
examples/voiceover-only/: compose-plan.json  script.json
landing-page/: README.md  package-lock.json  package.json
landing-page/app/: globals.css  layout.tsx  page.tsx
landing-page/components/: brand-icons.tsx  copy-button.tsx  feature-card.tsx  features-bento.tsx  footer.tsx  hero-background.tsx  hero.tsx  install.tsx  json-block.tsx  magnetic-button.tsx  nav.tsx  pipeline.tsx  terminal-block.tsx  tools-marquee.tsx  video-showcase.tsx
landing-page/lib/: tools.ts
landing-page/public/: README.md
lib/: __init__.py  compose.py  cut.py  doctor.py  export.py  ffmpeg_wrap.py  init_cmd.py  silence.py  transcribe.py  tts.py  voices.py
tests/: ffmpeg_wrap_unit.py  mcp_e2e.py  mcp_short_tools.py  progress_smoke.py  run_threaded_unit.py  slide_motion_unit.py
