[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "videopilot"
dynamic = ["version"]
description = "Agent-driven video creation toolkit: neural TTS voiceover, highlight cutting, timeline composition, and NLE export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mazen Bahgat", email = "mazenbahgat@microsoft.com" },
]
keywords = [
  "video",
  "voiceover",
  "tts",
  "edge-tts",
  "azure-speech",
  "ffmpeg",
  "screen-recording",
  "highlight-reel",
  "narration",
  "fcpxml",
  "edl",
  "llm",
  "agent",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "edge-tts>=7.0",
  "faster-whisper>=1.0",
  "azure-cognitiveservices-speech>=1.40",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/mbahgatTech/videopilot"
Documentation = "https://github.com/mbahgatTech/videopilot/blob/main/README.md"
"Agent Runbook" = "https://github.com/mbahgatTech/videopilot/blob/main/AGENT.md"
Issues = "https://github.com/mbahgatTech/videopilot/issues"

[project.scripts]
videopilot = "videopilot_cli:main"
videopilot-mcp = "videopilot_mcp:main"

[tool.setuptools]
packages = ["lib"]
py-modules = ["videopilot_cli", "videopilot", "videopilot_mcp"]
include-package-data = true

[tool.setuptools.package-data]
lib = ["*.py"]

[tool.setuptools_scm]
# Version is derived from the most recent git tag. Tag-only releases:
#   git tag v0.1.2 && git push origin v0.1.2  -> wheel is exactly 0.1.2.
# Untagged main builds get a PEP 440 dev version like "0.1.2.dev3" so
# CI builds don't collide with each other on PyPI test indexes.
local_scheme = "no-local-version"
fallback_version = "0.0.0"
